--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-devcontainer-image:
     name: Release Please
-    runs-on: default-runner-csb
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
       - name: Pre-build dev container image
