push image for always

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,4 +19,4 @@ jobs:
           subFolder: typescript-node
           imageName: ghcr.io/codesandbox/devcontainers/typescript-node
           cacheFrom: ghcr.io/codesandbox/devcontainers/typescript-node
-          push: ${{ github.event_name != 'pull_request' }}
+          push: always
