--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,6 +35,7 @@ jobs:
         uses: devcontainers/ci@v0.3
         with:
           subFolder: ${{ matrix.image }}
-          imageName: ghcr.io/codesandbox/devcontainers/${{ matrix.image }}:0.1
+          imageName: ghcr.io/codesandbox/devcontainers/${{ matrix.image }}
+          imageTag: 0.1
           cacheFrom: ghcr.io/codesandbox/devcontainers/${{ matrix.image }}
           push: always
