--- a/universal/.devcontainer/Dockerfile
+++ b/universal/.devcontainer/Dockerfile
@@ -1,3 +1,5 @@
 FROM mcr.microsoft.com/devcontainers/universal:2-focal
 
 USER root
+
+COPY first-run-notice.txt /usr/local/etc/vscode-dev-containers/
