--- a/universal/.devcontainer/Dockerfile
+++ b/universal/.devcontainer/Dockerfile
@@ -3,3 +3,4 @@ FROM mcr.microsoft.com/devcontainers/universal:2-focal
 USER root
 
 COPY first-run-notice.txt /usr/local/etc/vscode-dev-containers/
+RUN rm /usr/local/etc/vscode-dev-containers/conda-notice.txt
