empty conda notice

--- a/universal/.devcontainer/Dockerfile
+++ b/universal/.devcontainer/Dockerfile
@@ -2,6 +2,4 @@ FROM mcr.microsoft.com/devcontainers/universal:2-focal
 
 USER root
 
-COPY first-run-notice.txt /usr/local/etc/vscode-dev-containers/
-
-RUN rm /usr/local/etc/vscode-dev-containers/conda-notice.txt
+COPY first-run-notice.txt conda-notice.txt /usr/local/etc/vscode-dev-containers/
